Dia-9/n8n/n8n-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-tailscale
  namespace: default
  annotations:
    tailscale.com/proxy-group: "ingress-proxies"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - n8n
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 5678
